--- a/Pages/1Solutions/2Consultation/1Industry/Industry Solutions/1Relocation.org
+++ b/Pages/1Solutions/2Consultation/1Industry/Industry Solutions/1Relocation.org
@@ -1,3 +1,4 @@
+Relocation
 * Header
 
 XR Relocation Solution 
@@ -15,8 +16,8 @@ about host cities prior to travel. We will increase preparedness
 and decrease workloads for people at post.
 
 • Simplify complex productions and technologies. You will
-learn to create and deploy VR content with their existing global
-network.
+learn to create and deploy VR content within existing global
+networks.
 
-• Integrate XR gradually to improve your current logistics models
+• Gradually integrate XR to improve your current logistics models.
 
