--- a/Pages/1Solutions/2Consultation/1Industry/Industry Solutions/6Education.org
+++ b/Pages/1Solutions/2Consultation/1Industry/Industry Solutions/6Education.org
@@ -4,10 +4,10 @@ XR Education Solution
  
 * Second
 
-Learn more 
+Learn more through Immersion
 
 * Abstract
 
-Allow universities to serve as portals to the most advanced dimensions of media, a new era of exploration. New frontiers like space, sea, and internal awareness have gained steam in the 21st century. Developing along with them has been this digital world that’s been in the making for more than a half century.   
+Allow universities to serve as portals to the most advanced dimensions of media. New frontiers like space, sea, and internal awareness have gained steam in the 21st century. Developing along with them has been this digital world that’s been in the making for more than a half century.   
 
-Those with the leading technological tools (vessels) will venture the furthest, the fastest. A new era of exploration will be lead by tech titans and educational institutions. Both are the leading educators in the world.   
+Those with the leading technological tools (vessels) will venture the furthest, the fastest. A new era of exploration will be lead by tech titans and educational institutions. Both are the leading educators in the world.
