--- a/Pages/1Solutions/2Consultation/1Industry/Industry Solutions/8Art.org
+++ b/Pages/1Solutions/2Consultation/1Industry/Industry Solutions/8Art.org
@@ -7,4 +7,9 @@ XR Art Solution
 Art is divine
  
 * Abstract
-/coming soon/
+
+There are two ways artists are interacting with the early days of Virtual Reality. 
+
+- Through programs like Google’s TitleBrush, artists are able to draw and paint their own three-dimensional environments. 
+
+-Photographers, painters, sculptors, designers and other visual artists are displaying their physical world creation inside the virtual world. See Infinite Gallery. 
