--- a/Pages/1Solutions/2Consultation/1Industry/Industry Solutions/10Design.org
+++ b/Pages/1Solutions/2Consultation/1Industry/Industry Solutions/10Design.org
@@ -8,4 +8,8 @@ Design is divine
 
 * Abstract
 
-And sublime.  More /coming soon/
+Design represents one of the most natural transitions into the virtual world. This term is incorporated into XR in two forms. 
+
+1) Preplanning: All major projects go through a preliminary design phase. Before major architectural, construction, transportation or assembly projects are configured in the physical world, they’re first outlined on a computer screen. Virtual Reality has introduced an intermediary step between this pre planning process and it’s real-world incorporation. Developing and experiencing these projects in the Virtual World before breaking ground in the physical world is becoming a crucial portion of the process. 
+
+2) With the Virtual World maturing, more companies are seeking three-dimensional artwork. Logos, animations, and 3D renders are moving to the forefront of brand mentality. As entertainment and commerce shift into 3D you’re brand will have to do the same. 
