--- a/Pages/1Solutions/2Consultation/1Industry/Industry Solutions/13Entertainment.org
+++ b/Pages/1Solutions/2Consultation/1Industry/Industry Solutions/13Entertainment.org
@@ -8,7 +8,7 @@ Be the story
 
 * Abstract
 
-Media and live entertainment are about to be shaken to their core by computer sciences and gaming. The two are on the verge of merging with entertainers and running away with the industry.
+The transition from analog to digital was a shock to the media and live entertainment industries, altering them from all angles. While the Virtual shift remains digital, it’s impact is equally as sizeable as computer science again alters the way we interact with media. A decade ago, phone screens and HD televisions brought mobility and clarity to the way consumers ingest information. Virtual and Augmented reality are inviting the consumer inside the information - blending the physical and digital worlds. 
 
 * Content
-With the boom of new AR applications, XR has become the new platform for entertainment media. A connection and experience unlike any possible through traditional media, XR allows the user to connect with and be part of the scene they’re viewing. 
+With the boom of new AR applications, XR has become the new platform for entertainment media. A connection and experience unlike anything possible through traditional media, XR allows the user to connect with and be part of the scene they’re viewing. 
