--- a/Pages/1Solutions/2Consultation/2Cross Industry/3World Peace.org
+++ b/Pages/1Solutions/2Consultation/2Cross Industry/3World Peace.org
@@ -12,11 +12,10 @@ Virtual Reality will democratize experience.
 
 Consider how the internet democratized information. 
 
-The internet has globalized us.  We communicate, share, and do business with people around the world - most we've never met in person.  Maybe never seen their face or heard their voice - but we /know/ them.
+The internet has globalized us. We communicate, share, and do business with people around the world - most we've never met in person. We may have never seen their face or heard their voice, but we /know/ them.
 
-XR empowers remote acess to in-person experiences, through shared virtual environments. 
+XR empowers remote access to in-person experiences through shared virtual environments. 
 
-If we really knew what it was like to walk in another's shoes, we'd be humbled.  If we visited the places our governments declared as enemies, we'd ask more questions.   If we knew first hand the horrors of war, the inhumanity of greed, and the glory of love, we'd live differently.      
+If we really knew what it was like to walk in another's shoes, we'd be humbled. If we visited the places our governments declared as enemies, we'd ask more questions. If we knew first hand the horrors of war, the inhumanity of greed, and the glory of love, we'd live differently.      
 
-Virtual Reality will democratize experience, and can bring world peace.
-
+Virtual Reality will democratize experience and facilitate peace.
