--- a/Pages/1Solutions/3Publications/Market Research/marketrese---4web.org
+++ b/Pages/1Solutions/3Publications/Market Research/marketrese---4web.org
@@ -38,6 +38,8 @@ Music and video made their way to the web with Napster and Netflix. It should be
 
 Publishing moved from /broadcast/ to /personal/.
 
+**** During the 2000s
+
 At the turn of the century Wifi, Bluetooth, Broadband, VoiP connected us further. Wikipedia and Tor appeared and more 400 million people were connected. 8.7 billion PCs shipped.   
 
 This (and other social conditions) gave rise to social media, as MySpace, CouchSurfing, Facebook, YouTube, Twitter and so on erupted. Then Wikileaks, SoundCloud, AirBnB, Uber, and smart phones let people share everything.   
