--- a/Pages/2Services/1Design/sketch---4web.org
+++ b/Pages/2Services/1Design/sketch---4web.org
@@ -1,8 +1,11 @@
 * Header
 
-Design
+Sketching
 
 * Second
 
-Sketch 
+Beginning Your Story
 
+* Content 
+
+The design process begins with you speaking and us listening, so we can better understand your business, vision, and brand mentality. Together we sketch out your vision, deciding which steps are most suitable for the direction of your business. After this first consultation, we’ll deliver to you a first draft - typically in the form of a script and a visual. With your feedback, we’ll iterate until it’s right. 
