--- a/Pages/2Services/2Develope/1Program/webxr---4web.org
+++ b/Pages/2Services/2Develope/1Program/webxr---4web.org
@@ -1,9 +1,11 @@
 * Header
+
 Program
+
 * Second
 
-WebXR
+Extended Reality Through Your Web Browser
 
-* Abstract
+* Content 
 
-/coming soon/
+Web XR represents the next step in making Virtual Reality more accessible to the masses. It’s powered by a JavaScript API that allows for compatible web browsers to render 2D and 3D graphics. As VR hardware becomes more agile, users at home will be able to sync their headsets to their computer screen and experience Extended Reality through their web browser. 
