--- a/Pages/2Services/2Develope/1Program/biometrics----4web.org
+++ b/Pages/2Services/2Develope/1Program/biometrics----4web.org
@@ -9,13 +9,11 @@ Biometrics
 * Abstract
 
 
-Biometrics refers to metrics related to human biological characteristics, including physiology nd neurology. In virtual reality biometrics are used to measure interest, entertainment and intent.   
+Biometrics refers to metrics related to human biological characteristics, including physiology and neurology. In Virtual Reality biometrics are used to measure interest, entertainment, and intent.   
 
-By monitoring physiological cues such as skin galvenization, eye dialation, heart and breathing rate, computers infer and escrapolate further details about the player and their experience.
+By monitoring physiological cues such as skin galvanization, eye dilation, heart and breathing rate, computers infer and extrapolate further details about the player and their experience.
 
-This enables us to remove the many errors and barriors that stand between user and feedback.By using bio-measurements we improve the storyline and pin point player's interest, displeasure, fatigue, excitement and much more.  
+This enables us to remove the many errors and barriers that stand between the user and feedback. By using bio-measurements we improve the storyline and pinpoint the player's interest, displeasure, fatigue, excitement and much more.  
 
-The seven primary emotions monitored in traditional commercial software is happiness, sadness, anger, contempt, fear, disgust, and suprise.
-
-* Content
+The seven primary emotions monitored in traditional commercial software are happiness, sadness, anger, contempt, fear, disgust, and surprise.
 
